# cmake-project

./: .gitignore  CMakeLists.txt  README.md
abs/: CMakeLists.txt
abs/include/: abs.hpp
abs/src/: abs.cpp
minus/: CMakeLists.txt
minus/include/: minus.hpp
plus/: CMakeLists.txt  plus.hpp
plus/include/: plus.hpp
program/: CMakeLists.txt  main.cpp
sqrt/: CMakeLists.txt
sqrt/include/: sqrt.hpp
sqrt/src/: sqrt.cpp
test/: AbsTest.cpp  CMakeLists.txt  SegFaultTest.cpp  SqrtTest.cpp
