add_library(plus SHARED plus.cpp)

target_include_directories(plus PUBLIC ${CMAKE_SOURCE_DIR})

set_target_properties(plus PROPERTIES
                      VERSION 1.0.0
                      SOVERSION 1)

install(TARGETS plus
        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
	PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_OLDINCLUDEDIR})
